<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="email"
            type="String" />
        <variable
            name="password"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.MainActivity">

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:background="#0A34B3"
            android:backgroundTint="#0A34B3"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_inicio_sesion"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@id/iv_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="8dp"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/txt_hint_email"
            android:inputType="textPersonName|textEmailAddress"
            android:layout_marginTop="50dp"
            android:text="@={email}"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="8dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/txt_hint_contrasena"
            android:inputType="textPassword"
            android:layout_marginTop="50dp"
            android:text="@={password}"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="8dp"/>


        <Button
            android:id="@+id/bt_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="50dp"
            android:background="#710303"
            android:backgroundTint="#700606"
            android:shadowColor="#EC1414"
            android:text="@string/txt_inicio_sesion"
            app:iconTint="#EC0000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <Button
            android:id="@+id/bt_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_crear_cuenta"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/bt_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>